# LLM_Ontology_Agent

./: .gitignore  README.md  config.py  llm_client.py  main.py  prompt.docx  pyproject.toml  requirements.txt  test_domain.txt  web_server.py
agents/: __init__.py  base_agent.py  cq_agent.py  explanation_agent.py  knowledge_populator.py  ontology_builder.py  orchestrator.py  prefrontal_lobe.py  reasoning_agent.py  term_extractor.py  validator.py
memory/: __init__.py  external.py  long_term.py  manager.py  persistent.py  working.py
skills/: README.md  cq_agent.md  explanation_agent.md  knowledge_populator.md  ontology_builder.md  orchestrator.md  prefrontal_lobe.md  reasoning_agent.md  term_extractor.md  validator.md
static/: app.js  style.css
templates/: index.html
utils/: __init__.py  document_loader.py  owl_utils.py
